# agentic-ai

./: .gitignore  README.md  RoadMap.md
backend/: .env.example  pytest.ini  requirements.txt
backend/app/: __init__.py  agent.py  chat_service.py  config.py  eval.py  eval_dataset.py  eval_runner.py  evaluators.py  main.py  observability.py  ragService.py  rag_service.py  rag_service_sop.py  schemas.py
backend/app/services/: __init__.py  copilot_service.py
backend/chroma_db/: chroma.sqlite3
backend/reflection/: .env.example  M2_UGL_2.ipynb  config.py  database.py  display.py  llm.py  main.py  products.db  requirements.txt  utils.py  workflow.py
backend/scripts/: test_copilot_chat_live.sh
backend/tests/: test_conversation_store.py  test_copilot_chat.py  test_eval_runner.py  test_evaluators.py
backend/tool/: .env.example  M3_UGL_2.ipynb  config.py  emails.db  llm_client.py  requirements.txt  utils.py
docs/: CopilotAgent架构说明.md  LangSmith-Copilot-Eval评估体系.md  LangSmith-Copilot-Trace接入说明.md  Pyhton 工程化.md  分析库的应用.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
hrAgent/: README.md  main.py  pyproject.toml
hrAgent/app/: main.py
hrAgent/app/api/: router.py
hrAgent/app/core/: config.py  response.py
hrAgent/app/core/exceptions/: handlers.py
hrAgent/app/db/: base.py  connection.py
hrAgent/app/db/repositories/: base.py
hrAgent/app/modules/user/: dependencies.py  models.py  repositories.py  routers.py  schemas.py  security.py  services.py
hrAgent/docs/: python 工程化.md
(+2 files in other folders)
