[project]
name = "hragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
]
